Fixed logo size and input style on firefox

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -6,6 +6,9 @@
   align-items: center;
   z-index: 200;
   background: #fff;
+  .header-logo-wrapper {
+    text-align: left;
+  }
   .header-logo {
     max-width: 16rem;
     max-height: 4rem;
